completed line graphs

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
             <div class="full-widget-container">
                 <canvas id="line-chart"></canvas>
             </div>
-
+            
         </section>
+
+        <hr class="horizontal line">
 
         <section class="bar-widget">
             <h3>Daily traffic</h3>
