Interactive line chart complete

--- a/index.html
+++ b/index.html
@@ -114,12 +114,16 @@
 
             <div class="traffic-heading">
                 <h3>Traffic</h3>
-                <ul class="traffic-list">
-                    <li class="traffic-link hourly">Hourly</li>
-                    <li class="traffic-link daily">Daily</li>
-                    <li class="traffic-link weekly">Weekly</li>
-                    <li class="traffic-link monthly">Monthly</li>
+
+                <div  class="traffic-list">
+                <ul>
+                    <li><a href="#" class="list-btn hourly-btn">Hourly</a></li>
+                    <li><a href="#" class="list-btn daily-btn">Daily</a></li>
+                    <li><a href="#" class="list-btn weekly-btn">Weekly</a></li>
+                    <li><a href="#" class="list-btn monthly-btn">Monthly</a></li>
                 </ul>
+            </div>
+
             </div>
 
             <div class="full-widget-container">
