Completed desktop media queries

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
 
         <hr class="horizontal line">
 
+        <div class="member-activity-container">
+
         <section class="new-members">
             <h3>New Members</h3>
 
@@ -267,7 +269,7 @@
                 </div>
                 <p class="date date-4">10/15/15</p>
             </div>
-
+            <hr class="horizontal line">
         </section>
 
         <hr class="horizontal line">
@@ -350,6 +352,10 @@
             <hr class="horizontal line">
 
         </section>
+        
+        </div>
+
+        <div class="message-settings-container">
 
         <section class="message-user">
             <h3>Message User</h3>
@@ -421,6 +427,8 @@
             </div>
 
         </section>
+
+    </div>
 
     </main>
 
