--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/js/script.js"></script>
     <script defer src="/js/form.js"></script>
+    <script defer src="/js/search.js"></script>
 </head>
 
 <body class="grid-container">
