--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/js/script.js"></script>
-    <script defer src="/js/form.js"></script>
-    <script defer src="/js/search.js"></script>
+    <script type="module" src="/js/charts.js"></script>
+    <script type="module" src="/js/form.js"></script>
+    <script type="module" src="/js/modal.js"></script>
+    <script type="module" src="/js/search.js"></script>
 </head>
 
 <body class="grid-container">
